turn on logging to try and solve issues.

--- a/WebContent/addspectatorejection.xhtml
+++ b/WebContent/addspectatorejection.xhtml
@@ -62,7 +62,7 @@
 					<h:outputText value=" "/>
 					<h:outputText value=" "/>
 					<b:commandButton value="Close" action="managesuspensionslist.xhtml" look="info"/>
-					<b:commandButton value="Add Spectator Ejection" actionListener="#{suspensionBean.Addspectatorejection()}" look="success"/>
+					<b:commandButton value="Add Spectator Ejection" actionListener="#{suspensionBean.AddspectatorejectionToDb()}" look="success"/>
 				</b:panelGrid>
 			</b:panel>
 		</b:column>
