added ability for nancy to udpate cep expiration info again.

--- a/WebContent/addcoachdetails.xhtml
+++ b/WebContent/addcoachdetails.xhtml
@@ -85,7 +85,7 @@
 				    	<f:selectItem itemLabel="Level 5" itemValue="5"/>
 					</b:selectOneMenu>
 					<h:outputText value="CEP Expires:" rendered="#{coachrosteractionBean.displaycoachcredentials}"/>
-					<b:inputText id="cepexpires" value="#{coachrosteractionBean.cepexpiresdisplayvalue}" rendered="#{coachrosteractionBean.displaycoachcredentials}"
+					<b:inputText id="cepexpires" value="#{coachrosteractionBean.cepexpires}" rendered="#{coachrosteractionBean.displaycoachcredentials}"
 						large-screen="full-width"
     					medium-screen="full-width"
     					small-screen="full-width"
