--- a/WebContent/workwithcoaches.xhtml
+++ b/WebContent/workwithcoaches.xhtml
@@ -65,20 +65,24 @@
 						select="true"
 						selectionMode="single" 
 						paginator="true"
-						
-						>
+
+				>
 						<b:dataTableColumn >
 			            <f:facet name="header">
 					        First<br/>Name
 					    </f:facet>
-			            <h:outputText value="#{coach.getFirstname()}" />
+							<b:inputText id="firstname" value="#{coach.firstname}" style="width:75px;" >
+
+							</b:inputText>
 			        </b:dataTableColumn>
 			        <b:dataTableColumn >
 			            <f:facet name="header">
 					        Last<br/>Name
 					    </f:facet>
-			            <h:outputText value="#{coach.getLastname()}" />
-			        </b:dataTableColumn>
+						<b:inputText id="lastname" value="#{coach.lastname}"  style="width:75px;" >
+
+						</b:inputText>
+					</b:dataTableColumn>
 			        <b:dataTableColumn >
 			            <f:facet name="header">
 					        2022<br/>Team
@@ -95,48 +99,79 @@
 			            <f:facet name="header">
 					        Safe<br/>sport
 					    </f:facet>
-			            <h:outputText value="#{coach.getSafesport()}" />
-			        </b:dataTableColumn>
+						<b:selectOneMenu value="#{coach.safesportforcoachlist}">
+							<f:selectItem itemLabel="No" itemValue="0"/>
+							<f:selectItem itemLabel="Yes" itemValue="1"/>
+
+						</b:selectOneMenu>
+					</b:dataTableColumn>
 			        <b:dataTableColumn >
 			            <f:facet name="header">
 					        Sport<br/>Exp
 					    </f:facet>
-			            <h:outputText value="#{coach.getSportexpires()}" />
-			        </b:dataTableColumn>
+						<b:inputText id="sportexp" value="#{coach.sportexpires}" style="width:90px;" >
+
+						</b:inputText>
+					</b:dataTableColumn>
 			        <b:dataTableColumn >
 			            <f:facet name="header">
 					        Scrn<br/>Exp
 					    </f:facet>
-			            <h:outputText value="#{coach.getScreeningexpires()}" />
-			        </b:dataTableColumn>
+						<b:inputText id="screenexpire" value="#{coach.screeningexpires}" style="width:90px;" >
+
+						</b:inputText>
+					</b:dataTableColumn>
 			        <b:dataTableColumn >
 			            <f:facet name="header">
 					        CEP<br/>#
 					    </f:facet>
-			            <h:outputText value="#{coach.getCepnumber()}" />
+						<b:inputText id="cepnum" value="#{coach.cepnumber}" style="width:80px;" >
+
+						</b:inputText>
 			        </b:dataTableColumn>
 			        <b:dataTableColumn >
 			            <f:facet name="header">
 					        CEP<br/>Level
 					    </f:facet>
-			            <h:outputText value="#{coach.getCeplevel()}" />
+						<b:selectOneMenu value="#{coach.ceplevel}"
+										 large-screen="full-width"
+										 medium-screen="full-width"
+										 small-screen="full-width"
+										 tiny-screen="full-width"
+						>
+							<f:selectItem itemLabel="Select One" itemValue="0"/>
+							<f:selectItem itemLabel="Level 1" itemValue="1"/>
+							<f:selectItem itemLabel="Level 2" itemValue="2"/>
+							<f:selectItem itemLabel="Level 3" itemValue="3"/>
+							<f:selectItem itemLabel="Level 4" itemValue="4"/>
+							<f:selectItem itemLabel="Level 5" itemValue="5"/>
+						</b:selectOneMenu>
 			        </b:dataTableColumn>
 			        <b:dataTableColumn >
 			            <f:facet name="header">
 					        CEP<br/>Exp
 					    </f:facet>
-			            <h:outputText value="#{coach.getCepexpires()}" />
+						<b:inputText id="cepexpires" value="#{coach.cepexpires}"  style="width:95px;" >
+
+						</b:inputText>
 			        </b:dataTableColumn>
 			        <b:dataTableColumn >
 			            <f:facet name="header">
 					        Mods
 					    </f:facet>
-			            <h:outputText value="8U: #{coach.getU8()}" /><br/>
-			            <h:outputText value="10U: #{coach.getU10()}" /><br/>
-			            <h:outputText value="12U: #{coach.getU12()}" /><br/>
-			            <h:outputText value="14U: #{coach.getU14()}" /><br/>
-			            <h:outputText value="18U: #{coach.getU18()}" /><br/>
-			            <h:outputText value="Girls: #{coach.getGirls()}" /><br/>
+						<b:selectMultiMenu id="cepmodules" style="width: 100%;" includeSelectAllOption="true" value="#{coach.cepmodulesselected}"
+										   large-screen="full-width"
+										   medium-screen="full-width"
+										   small-screen="full-width"
+										   tiny-screen="full-width"
+						>
+							<f:selectItem itemLabel="8U" itemValue="8U" />
+							<f:selectItem itemLabel="10U" itemValue="10U" />
+							<f:selectItem itemLabel="12U" itemValue="12U" />
+							<f:selectItem itemLabel="14U" itemValue="14U" />
+							<f:selectItem itemLabel="18U" itemValue="18U" />
+							<f:selectItem itemLabel="Girls" itemValue="Girls" />
+						</b:selectMultiMenu>
 			        </b:dataTableColumn>
 			        <b:dataTableColumn >
 			            <f:facet name="header">
@@ -144,12 +179,12 @@
 					    </f:facet>
 			            <h:outputText value="#{coach.getConfirmed()}" />
 			        </b:dataTableColumn>
-					<b:dataTableColumn >
+					<!--<b:dataTableColumn >
 						<f:facet name="header">
 							Susp
 						</f:facet>
 						<h:outputText value="#{coach.getSuspended()}" />
-					</b:dataTableColumn>
+					</b:dataTableColumn>-->
 					<b:dataTableColumn >
 			            <f:facet name="header">
 					        Notes
@@ -160,6 +195,14 @@
 				            <f:facet name="header">
 						        Option
 						    </f:facet>
+							<b:commandButton id="updatecoachrow" value="Update Coach" look="success" actionListener="#{coachbcloiBean.updateCoach(coach)}"
+											 large-screen="full-width"
+											 medium-screen="full-width"
+											 small-screen="full-width"
+											 tiny-screen="full-width"
+							>
+								<f:ajax execute="@form" render="@form" update="listofplayers"/>
+							</b:commandButton>
 							<b:commandButton value="Confirm LOI" 
 						                       action="#{coachbcloiBean.confirmLoi(coach)}" update="@form" look="success" rendered="#{coach.getConfirmed()=='No'}"
 						                       large-screen="full-width"
