fixed blank roster type issue

--- a/WebContent/editrosterdetail.xhtml
+++ b/WebContent/editrosterdetail.xhtml
@@ -43,8 +43,8 @@
 				    	<f:selectItem itemLabel="Assistant Coach" itemValue="Assistant Coach"/>
 				    	<f:selectItem itemLabel="Student Coach" itemValue="Student Coach"/>
 				    	<f:selectItem itemLabel="Head Coach" itemValue="Head Coach"/>
-				    	<f:selectItem itemLabel="Manager" itemValue="Manager"/>
-				    </b:selectOneMenu>
+						<f:selectItem itemLabel="Assistant Coach/Manager" itemValue="Assistant Coach/Manager"/>
+					</b:selectOneMenu>
 					<h:outputText value="Active:" />
 					<b:selectOneMenu value="#{editrosterdetailBean.active}" 
 						large-screen="full-width"
