added suspend functionality for loi's

--- a/WebContent/quickplayerloiconfirmnew.xhtml
+++ b/WebContent/quickplayerloiconfirmnew.xhtml
@@ -150,9 +150,17 @@
 						    					tiny-screen="full-width"
 						                       >
 						       <f:ajax execute="@this" render="@form" />
-						    </b:commandButton>				            
+						    </b:commandButton>
+							<b:commandButton value="#{player.getSuspendedmessage()}"
+											 action="#{quickreviewloiBean.suspendLoi(player)}" update="@form" look="danger"
+											 large-screen="full-width"
+											 medium-screen="full-width"
+											 small-screen="full-width"
+											 tiny-screen="full-width">
+								<f:ajax execute="@this" render="@form" />
+							</b:commandButton>
 
-				        </b:dataTableColumn> 
+						</b:dataTableColumn>
 			        </b:dataTable>
 			        <p:spacer width="10" height="5" />
 			        <b:panelGrid colSpans="4,2,2,2,2">
