--- a/WebContent/workwithbirthcertificate.xhtml
+++ b/WebContent/workwithbirthcertificate.xhtml
@@ -179,6 +179,15 @@
 						    					tiny-screen="full-width">
 						       <f:ajax execute="@this" render="@form" update="listofplayers"/>
 						    </b:commandButton>
+							<b:commandButton value="#{player.getSuspendedmessage()}"
+											 action="#{bcloiBean.suspendLoi(player)}" update="@form" look="danger"
+											 large-screen="full-width"
+											 medium-screen="full-width"
+											 small-screen="full-width"
+											 tiny-screen="full-width">
+								<f:ajax execute="@this" render="@form" />
+							</b:commandButton>
+
 						</b:dataTableColumn> 
 			        </b:dataTable>
 			        <p:spacer width="10" height="5" />
