--- a/WebContent/scahaviewcoachloi.xhtml
+++ b/WebContent/scahaviewcoachloi.xhtml
@@ -116,7 +116,16 @@
 					<p:spacer width="10" height="10" />
 					<b:panelGrid colSpans="2,10" id="loisuspend" style="padding: 5;">
 						<h:outputText style="font-weight: bold;" value="Loi Suspended?:"/>
-						<h:outputText value="#{coachloiBean.suspended}"/>
+						<!--<h:outputText value="#{coachloiBean.suspended}"/>-->
+						<b:selectOneMenu value="#{coachloiBean.suspended}"
+										 large-screen="full-width"
+										 medium-screen="full-width"
+										 small-screen="full-width"
+										 tiny-screen="full-width"
+						>
+							<f:selectItem itemLabel="No" itemValue="0"/>
+							<f:selectItem itemLabel="Yes" itemValue="1"/>
+						</b:selectOneMenu>
 						<h:outputText value="Note:"/>
 					    <b:inputTextarea value="#{coachloiBean.notes}" rows="3" cols="100"/>
 					</b:panelGrid>
