--- a/WebContent/workwithcoaches.xhtml
+++ b/WebContent/workwithcoaches.xhtml
@@ -67,7 +67,7 @@
 						paginator="true"
 
 				>
-						<b:dataTableColumn >
+					<b:dataTableColumn >
 			            <f:facet name="header">
 					        First<br/>Name
 					    </f:facet>
@@ -179,12 +179,21 @@
 					    </f:facet>
 			            <h:outputText value="#{coach.getConfirmed()}" />
 			        </b:dataTableColumn>
-					<!--<b:dataTableColumn >
+					<b:dataTableColumn >
 						<f:facet name="header">
 							Susp
 						</f:facet>
-						<h:outputText value="#{coach.getSuspended()}" />
-					</b:dataTableColumn>-->
+						<!--<h:outputText value="#{coach.getSuspended()}" />-->
+						<b:selectOneMenu value="#{coach.suspend}"
+										 large-screen="full-width"
+										 medium-screen="full-width"
+										 small-screen="full-width"
+										 tiny-screen="full-width"
+						>
+							<f:selectItem itemLabel="No" itemValue="0"/>
+							<f:selectItem itemLabel="Yes" itemValue="1"/>
+						</b:selectOneMenu>
+					</b:dataTableColumn>
 					<b:dataTableColumn >
 			            <f:facet name="header">
 					        Notes
