updated notes column for coaches manage roster team detail page.

--- a/WebContent/editroster.xhtml
+++ b/WebContent/editroster.xhtml
@@ -366,6 +366,14 @@
 							<f:selectItem itemLabel="Yes" itemValue="1"/>
 						</b:selectOneMenu>
 					</b:dataTableColumn>
+					<b:dataTableColumn >
+						<f:facet name="header">
+							Notes
+						</f:facet>
+						<b:inputText id="notes" value="#{coach.notes}"  style="width:95px;" >
+
+						</b:inputText>
+					</b:dataTableColumn>
 
 					<b:dataTableColumn >
 			            <f:facet name="header">
