update player hot list with usa roster option and editable rows.

--- a/WebContent/quickplayerloiconfirm.xhtml
+++ b/WebContent/quickplayerloiconfirm.xhtml
@@ -35,7 +35,7 @@
 					</b:panelGrid>
 					<b:dataTable 
 						id="listofplayers" 
-						var="player"
+						var="roster"
 						value="#{quickreviewloiBean.getPlayerdatamodel()}"
 						selection="#{quickreviewloiBean.selectedplayer}"
 						editable="true" 
