--- a/WebContent/viewdelinquencylist.xhtml
+++ b/WebContent/viewdelinquencylist.xhtml
@@ -10,7 +10,7 @@
       xmlns:b="http://bootsfaces.net/ui">
 
 <f:metadata>
-	<f:event type="preRenderView" listener="#{profileBean.verifyHasRoles('S-REG')}" />
+	<f:event type="preRenderView" listener="#{profileBean.verifyHasRoles('S-REG;A-DLIST')}" />
 </f:metadata>
 
 <ui:composition template="/WEB-INF/templates/layoutadmin.xhtml">
@@ -80,6 +80,7 @@
 	    						medium-screen="full-width"
 	    						small-screen="full-width"
 	    						tiny-screen="full-width"
+											 rendered="#{profileBean.hasRoleList('S-REG')}"
 	    					 >
 					       <f:ajax execute="@this" render="@form" />
 					    </b:commandButton>
