--- a/WebContent/quickplayerloiconfirmnew.xhtml
+++ b/WebContent/quickplayerloiconfirmnew.xhtml
@@ -73,8 +73,18 @@
 						        2022 Team
 						    </f:facet>
 							<h:outputText value="#{player.getPreviousteam()}"/>
-				        </b:dataTableColumn> 
-				        <b:dataTableColumn >
+				        </b:dataTableColumn>
+						<b:dataTableColumn >
+							<f:facet name="header">
+								Apply PDR?
+							</f:facet>
+							<b:selectOneMenu id="pdr" value="#{player.pdrapply}" >
+								<f:selectItem itemLabel="Yes" itemValue="1"/>
+								<f:selectItem itemLabel="No" itemValue="0"/>
+							</b:selectOneMenu>
+
+						</b:dataTableColumn>
+						<b:dataTableColumn >
 				            <f:facet name="header">
 						        DOB
 						    </f:facet>
