fixed email for loi, shrunk text for quick player and quick coach loi list pages

--- a/WebContent/workwithbirthcertificate.xhtml
+++ b/WebContent/workwithbirthcertificate.xhtml
@@ -119,7 +119,7 @@
 						<f:facet name="header">
 							Safesport
 						</f:facet>
-						<h:outputText value="N/A" rendered="#{!player.safesportfor18}"/>
+						<h:outputText value="N/A" rendered="#{!player.is18safesport}"/>
 						<b:selectOneMenu value="#{player.safesportfor18}"
 										 large-screen="full-width"
 										 medium-screen="full-width"
